--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,13 +1,13 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
-template: splash # Remove or comment out this line to display the site sidebar on this page.
+title: COSMIC
+description: Community docs for the COSMIC Desktop Environment
+template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Community docs for the COSMIC Desktop Environment
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/logos/cosmic.webp
   actions:
-    - text: Example Guide
+    - text: Documentation
       link: /guides/example/
       icon: right-arrow
     - text: Read the Starlight docs
